src/CSS/menuPane.css
/*************************************************
 *** Related to the design of the cookie popup ***
 *************************************************/

#cookie {
    height: 100vh;
    width: 100vw;

    display: block;
    align-content: center;
}

#cookieContainer {
    width: 70vw;
    margin: auto;

    display: flex;
    flex-direction: column;
    justify-content: center;
}

#choiceContainer {
    width: 70%;

    display: flex;
    justify-content: space-around;

    margin: auto;
}

#cookieMsg {
    width: 70%;
    height: 60vh;
    font-size: 7vh;
    line-height: 1.15;

    margin-top: 5vh;

    overflow-y: scroll;
}

.cookieChoice {
    width: 48%;
    height: 2.5em;

    background-color: #ffffff;

    border: solid;
    border-color: #000000;
    border-width: 1px;
    border-radius: 7px;
    opacity: 1;

    /* Shadow heavily inspired by example made by w3schools.com link: https://www.w3schools.com/css/css3_shadows.asp */
    box-shadow:  0 0.15em 0.15em 0 rgba(0,0,0,0.2), 0 0.01em 0.3em 0 rgba(0,0,0,0.19);

    text-align: center;
    font-size: 1.65em;

    margin: auto;

    display: flex;
    flex-direction: column;
    justify-content: center;
}

.cookieChoice:hover {
    background-color: #fbe6c5;
    font-style: italic;
}

/****************************************
*** Related to overall design of menu ***
*****************************************/
#menuPane {
    width: 290px;
    height: 95vh;
    float: left;

    position: fixed;

    left: 1vw;
    top: 1vw;

    z-index: 2400;

    overflow-y: scroll;

}


.menuPaneStyle {

    background-color: #ffffff;

    border: solid;
    border-color: #000000;
    border-width: 1px;
    border-radius: 7px;
    opacity: 1;
    padding: 0.5em;

    margin-left: auto;
    margin-right: auto;
    margin-top: auto;
    margin-bottom: 1em;

    width: 266.85px;
    height: auto;

    align-content: center;

    /* Shadow heavily inspired by example made by w3schools.com link: https://www.w3schools.com/css/css3_shadows.asp */
    box-shadow:  0 0.15em 0.15em 0 rgba(0,0,0,0.2), 0 0.01em 0.3em 0 rgba(0,0,0,0.19) !important;

}


.menuPaneHeader {
    width: 100%;
    height: 3.5em;

    display: flex;
    align-content: center;

    margin: auto;
}


.menuPaneHeaderChild {
    flex: 1;
    margin: 5%;

}


.menuPaneHeaderChild:first-child {
    margin: 5%;
}


.menuPaneHeadline {
    width: 70%;
    height: 20%;

    text-align: left;
    font-family: "Times New Roman";
    font-size: 150%;

    margin-left: 10%;
}



/***********************************
*** Related to design of buttons ***
************************************/

.dropDownIcon {
    transition: all 0.25s ease;

    width: 2em;
    height: 2em;

    display: block;
    margin: auto;
}


/********************************************
*** Related to design of coordinates pane ***
*********************************************/


#coordPaneHeadline {
    display: block;
    margin: auto;

    padding: 0.5em;
}


#coordListDiv {
    display: none;
    margin: auto;

    overflow-y: scroll;
    height: 75%;
}


.coordPaneHeaderChild {
    flex: 1;
    margin: 5%;

}


.coordPaneHeaderChild:first-child {
    margin: 5%;
}


.coordsStyle {

    border: solid;
    border-color: #000000;
    border-width: 1px;
    border-radius: 7px;
    opacity: 1;
    padding: 0.5em;

    margin-left: 1em;
    margin-right: 1em;

    width: 85%;

    align-content: center;

}


.coordElContainer {
    display: flex;
    justify-content: space-around;
    height: 2em;

    padding-bottom: .75em;
    padding-right: .5em;
}

.coordElContainer:first-child {
    margin-top: .15em;
}

.controlsContainerClass {
    width: 45%;
    height: 2em;
    display: flex;
    justify-content: space-around;
}


.deleteBtnClass {
    height: 2em;
    width: 50%;
}


.upDownContainerClass {
    height: 2em;
    width: 50%;
    display: flex;
    flex-direction: column;
}


.upBtnClass, .downBtnClass {
    height: 1em;
}

.deleteBtnClass:hover, .upBtnClass:hover, .downBtnClass:hover {
    filter: brightness(40%);
}


/*********************************
 *** Design of facilities pane ***
 *********************************/

#facilPaneDropDown {
    width: 100%;
    height: 70%;

    overflow-y: scroll;

    display: none;
    margin: auto;
}


.facilIcon {
    width: 3em;
    height: 3em;
    margin: .5em;
}

.facilIcon:hover {

    content: attr(title);
}


.row {
    display: flex;
    justify-content: space-around;
}



/**********************
 *** MOUSE LOCATION ***
 **********************/

#mouseLoc {
    display: flex;
    justify-content: center;
}



/**********************
 *** TOTAL DISTANCE ***
 **********************/

#routeDistance {
    display: flex;
    justify-content: center;
}

